<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="0dp"
    tools:context=".AboutAuthor">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="235dp"
        android:background="@drawable/foreground"
        android:scaleType="centerCrop" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_author"
        android:layout_width="182dp"
        android:layout_height="142dp"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="160dp"
        android:src="@drawable/author"
        app:civ_border_color="#FFFFFF"
        app:civ_border_width="2dp" />

    <TextView
        android:id="@+id/name_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="310dp"
        android:fontFamily="sans-serif"
        android:text="@string/name_author"
        android:textAlignment="center"
        android:textColor="#322E2E"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/about_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="345dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/about_author"
        android:textAlignment="center"
        android:textColor="#322E2E"
        android:textSize="16sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/quote_author"
        android:layout_width="362dp"
        android:layout_height="161dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="430dp"
        android:layout_marginRight="30dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/quotes_author"
        android:textAlignment="center"
        android:textColor="#322E2E"
        android:textSize="34sp"
        android:textStyle="normal" />

    <Button
        android:id="@+id/button_follow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="670dp"
        android:layout_marginRight="120dp"
        android:background="@drawable/rounded_button"
        android:text="Contact Me" />

    <TextView
        android:id="@+id/email_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="370dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/holilhaqalim_gmail_com"
        android:textAlignment="center"
        android:textColor="#322E2E"
        android:textSize="13sp"
        android:textStyle="normal" />

</RelativeLayout>